# network

./: .dockerignore  .gitignore  ABISSAndNISS.md  CHANGELOG.md  DEPENDENCIES.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_SUMMARY.md  Dockerfile  INSTALLATION_STATUS.md  LICENSE  LICENSE-MIT  LORA_TESTING_README.md  PROJECT_STATUS.md  PR_MERGE_TEXT.md  README.md  SECURITY_ROADMAP.md  TASK-002-TDD-LOG.md  WEB_SERVER_IMPLEMENTATION_PLAN.md  advanced_security_tests.py  api_endpoints_report.json  basic_functionality_report.json  ca_database.db  ci_health_report.json  ci_health_report_fixed.json  collection.json  complete_functionality_test_report.json  consolidated_security_report.py  debug_crypto.py  debug_import.py  debug_memory_methods.py  debug_model_manager.py  debug_nnis_config.py  debug_nnis_recognition.py  demo_owasp_attacks.py  dev-requirements.txt  docker-compose.yml  endpoints_test_report.json  final_lora_test.py  final_system_report.json  gemma_config.json  (+45 more)
atous_sec_network/: __init__.py  __main__.py
atous_sec_network/agent/: cli.py  policy_client.py  runtime.py
atous_sec_network/api/: README.md  __init__.py  server.py
atous_sec_network/config/: __init__.py  gemma_3n_config.py  gemma_config.py
atous_sec_network/core/: __init__.py  crypto_utils.py  logging_config.py  model_manager.py  model_manager_base.py  model_manager_impl.py  model_metadata.py  secure_fl.py  serialization.py
atous_sec_network/database/: __init__.py  auth_service.py  database.py  init_db.py  models.py
atous_sec_network/ml/: llm_service.py
atous_sec_network/network/: __init__.py  lora_compat.py  lora_optimizer.py  lora_optimizer_fixed.py  p2p_recovery.py
atous_sec_network/overlay/: quic_transport.py
atous_sec_network/security/: __init__.py  abiss.py  abiss_system.py  access_control.py  auth_integration.py  ca_service.py  config.py  identity_service.py  input_validator.py  key_manager.py  nnis.py  nnis_system.py  policy_service.py  refresh_token_manager.py  security_middleware.py  security_policies.py  security_presets.py
backups/: version_history.json
config/: security_presets.yaml
data/: atous_network.db
deploy/: env.example
deploy/nginx/: nginx-ssl.conf  nginx.conf
deploy/systemd/: atous-sec-network.service
docs/: ABISSAndNISS.md  CLEANUP_SUMMARY.md  FEATURE_03_CA_IDENTITY_IMPLEMENTATION.md  GEMMA_KAGGLE_GUIDE.md  LLM_SYSTEM_GUIDE.md  POSTMAN_COLLECTION_README.md  STARTUP_GUIDE.md  TESTING_GUIDE.md  USER_GUIDE.md  WEBSOCKET_API.md  WEBSOCKET_GUIDE.md  api-contracts.md  auth-endpoints.md  collection.json  collection_update_summary.md  development_plan.md  gemma_access_complete_guide.md  gemma_integration_report.md  index.md
docs/admin/: README.md
docs/api/: ATous_LLM_API.postman_collection.json  LLM_API.md  QUICK_START_LLM.md
docs/api-reference/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/development/: README.md
docs/getting-started/: README.md
docs/guides/: TESTING_GUIDE.md
docs/modules/: README.md
docs/security/: IMPLEMENTATION_SUMMARY.md  README.md
docs/specs/: PRODUCTION_READINESS.md
docs/technical/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  ENDPOINTS_MAP.md  SYSTEM_ARCHITECTURE.md
k8s/: deployment.yaml  ingress.yaml  service.yaml
reports/: README.md  api_endpoints_report_backup.json  relatorio_final_sistema_defesa.json  security_test_report_final.json
scripts/: README.md  SYSTEM_REVIEW_REPORT.md  TEST_RESULTS_SUMMARY.md  advanced_security_tests.py  apply_security_preset.py  attack_simulation.py  available_gemma_models.json  chat_with_gemma.py  check_api_docs.py  check_gemma_3n_status.py  check_gemma_models.py  ci_health_check.py  configure_gemma.py  configure_gemma_3n.py  debug_import.py  debug_llm_loading.py  debug_threat_pattern.py  demo_auth_integration.py  demo_database_auth.py  demo_security_policies.py  download_gemma_hf.py  download_gemma_kaggle.py  download_gemma_kaggle.sh  final_gemma_setup.py  fix_gemma_3n_setup.py  fix_llm_model_path.py  fix_main_file.py  gemma_access_guide_updated.py  gemma_approval_guide.py  owasp.sh  owasp_training_system.py  run_app_lite.py  run_tests.py  seed_admin_demo.py  seed_identity_system.py  setup_huggingface_auth.py  setup_tflite_gemma.py  start_server_with_db.py  stress_security_tests.py  test_abiss_methods_check.py  (+19 more)
test_env/: pyvenv.cfg
tests/: TESTING_APPROACH.md  __init__.py  conftest.py  conftest_fixed.py  test_llm_service_tdd.py  test_llm_service_tdd_simple.py  test_network_endpoints_tdd.py  test_nnis_system_tdd.py  test_relay_status_real_tdd.py  test_relay_status_tdd.py  test_security_config_tdd.py  test_security_config_tdd_simple.py
tests/api/: __init__.py  test_health_endpoint.py
tests/fl/: __init__.py  test_secure_fl.py
tests/integration/: __init__.py  test_abiss_integration.py  test_api_endpoints.py  test_database_auth_integration.py  test_logging_integration.py  test_security_validation.py
tests/mocks/: __init__.py  gpio_mock.py  serial_mock.py  setup.py
tests/security/: __init__.py  test_abiss_advanced.py  test_abiss_system.py  test_advanced_security.py  test_auth_integration.py  test_auth_system.py  test_compression_serialization.py  test_crypto_functions.py  test_key_manager.py  test_nnis_advanced.py  test_nnis_performance_methods.py  test_owasp_training_system.py  test_real_crypto.py  test_secure_serialization.py  test_security_policies.py  test_task_002_tdd.py
tests/unit/: certifi_patch.py  check_import.py  conftest.py  conftest.py.disabled  conftest_lora.py  conftest_lora_fixed.py  conftest_model_manager.py  conftest_patch.py  test_abiss_missing_methods.py  test_abiss_recursion_fix.py  test_abiss_system.py  test_database_auth_service.py  test_database_init.py  test_database_schema.py  test_direct_model_manager.py  test_import.py  test_logging_config.py  test_lora_basic.py  test_lora_compat.py  test_lora_compat_isolated.py  test_lora_comprehensive.py  test_lora_deps.py  test_lora_direct_import.py  test_lora_optimizer.py  test_lora_optimizer.py_new  test_lora_simple_import.py  test_model_integrity.py  test_model_manager.py  test_nnis_system.py  (+16 more)
(+36 files in other folders)
