[metadata]
name = atous-sec-network
description = ATous Secure Network - Enhanced IoT Security with Federated Learning and LoRa
author = Rodolfo Rodrigues
author_email = rrcode@onionmail.org
version = 2.0.0

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    torch>=1.9.0
    transformers>=4.11.0
    flwr>=1.0.0
    scikit-learn>=1.0.0
    pandas>=1.3.0
    paho-mqtt>=1.6.0
    requests>=2.26.0
    cryptography>=3.4.0
    PyJWT>=2.4.0
    bcrypt>=3.2.0
    pydantic>=1.8.0
    msgpack>=1.0.0
    prometheus-client>=0.11.0
    psutil>=5.8.0
    dash>=2.0.0
    plotly>=5.0.0
    bsdiff4>=0.2.0

[options.extras_require]
dev =
    pytest>=6.2.0
    pytest-asyncio>=0.15.0
    pytest-cov>=2.12.0
    pytest-mock>=3.6.0
    black>=21.7b0
    flake8>=3.9.0
    mypy>=0.910

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --verbose --cov=atous_sec_network
filterwarnings = ignore::DeprecationWarning
